Mon Jun 10 01:07:57 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (absint_numwords_bytes): New function.
	  (absint_numwords_generic): Extracted from rb_absint_numwords.
	  (rb_absint_numwords): Use absint_numwords_bytes if possible.

Sun Jun  9 21:33:15 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_absint_numwords): Return (size_t)-1 when overflow.
	  Refine variable names.
	  (rb_absint_size): Refine variable names.

	* internal.h (rb_absint_size): Refine an argument name.
	  (rb_absint_numwords): Ditto.

Sun Jun  9 16:51:41 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_absint_numwords): Renamed from rb_absint_size_in_word.

	* internal.h (rb_absint_numwords): Follow the above change.

	* pack.c (pack_pack): Ditto.

	* random.c (rand_init): Ditto.
	  (limited_big_rand): Ditto.

Sun Jun  9 14:41:05 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_integer_pack): numwords_allocated argument removed.

	* internal.h (rb_integer_pack): Follow the above change.

	* hash.c (rb_hash): Ditto.

	* time.c (v2w_bignum): Ditto.

	* pack.c (pack_pack): Ditto.

	* random.c (int_pair_to_real_inclusive): Ditto.
	  (rand_init): Ditto.
	  (random_load): Ditto.
	  (limited_big_rand): Ditto.

Sun Jun  9 09:34:44 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (big2str_base_powerof2): New function.
	  (rb_big2str0): Use big2str_base_powerof2 if base is 2, 4, 8, 16 or 32.

Sun Jun  9 00:59:04 2013  Tanaka Akira  <akr@fsij.org>

	* hash.c (rb_hash): Use rb_integer_pack to obtain least significant
	  long integer.

Sat Jun  8 23:56:00 2013  Tanaka Akira  <akr@fsij.org>

	* numeric.c (rb_num_to_uint): Use rb_absint_size instead of
	  RBIGNUM_LEN.

Sat Jun  8 22:53:45 2013  Tanaka Akira  <akr@fsij.org>

	* marshal.c (r_object0): Use rb_integer_unpack.

Sat Jun  8 22:18:57 2013  Tanaka Akira  <akr@fsij.org>

	* time.c (v2w): Use rb_absint_size instead of RBIGNUM_LEN.

Sat Jun  8 21:47:33 2013  Tanaka Akira  <akr@fsij.org>
